add enginx template confs

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:lts-buster
-WORKDIR /mern-stack/client
+WORKDIR /client
 COPY ./client/package*.json ./
 RUN npm install
 CMD ["npm", "run", "start"]
